crates/ra_ide_api/src/completion/snapshots/completion_item__bindings_from_for.snap
---
created: "2019-05-23T22:23:35.119822026Z"
creator: insta@0.8.1
source: crates/ra_ide_api/src/completion/completion_item.rs
expression: kind_completions
---
[
    CompletionItem {
        label: "quux",
        source_range: [83; 83),
        delete: [83; 83),
        insert: "quux()$0",
        kind: Function,
        detail: "fn quux()",
    },
    CompletionItem {
        label: "x",
        source_range: [83; 83),
        delete: [83; 83),
        insert: "x",
        kind: Binding,
    },
]
