crates/ra_ide_api/src/completion/snapshots/completion_item__bindings_from_if_let.snap
---
created: "2019-05-23T22:23:35.122168608Z"
creator: insta@0.8.1
source: crates/ra_ide_api/src/completion/completion_item.rs
expression: kind_completions
---
[
    CompletionItem {
        label: "a",
        source_range: [214; 214),
        delete: [214; 214),
        insert: "a",
        kind: Binding,
    },
    CompletionItem {
        label: "b",
        source_range: [214; 214),
        delete: [214; 214),
        insert: "b",
        kind: Binding,
    },
    CompletionItem {
        label: "quux",
        source_range: [214; 214),
        delete: [214; 214),
        insert: "quux()$0",
        kind: Function,
        detail: "fn quux()",
    },
]
