crates/ra_ide_api/src/completion/snapshots/completion_item__bindings_from_let.snap
---
created: "2019-05-23T22:23:35.122797188Z"
creator: insta@0.8.1
source: crates/ra_ide_api/src/completion/completion_item.rs
expression: kind_completions
---
[
    CompletionItem {
        label: "quux",
        source_range: [79; 79),
        delete: [79; 79),
        insert: "quux($0)",
        kind: Function,
        detail: "fn quux(x: i32)",
    },
    CompletionItem {
        label: "x",
        source_range: [79; 79),
        delete: [79; 79),
        insert: "x",
        kind: Binding,
    },
    CompletionItem {
        label: "y",
        source_range: [79; 79),
        delete: [79; 79),
        insert: "y",
        kind: Binding,
    },
]
