crates/ra_ide_api/src/completion/snapshots/completion_item__completes_break_and_continue_in_loops1.snap
---
created: "2019-05-23T22:23:35.067956470Z"
creator: insta@0.8.1
source: crates/ra_ide_api/src/completion/completion_item.rs
expression: kind_completions
---
[
    CompletionItem {
        label: "break",
        source_range: [55; 55),
        delete: [55; 55),
        insert: "break;",
        kind: Keyword,
    },
    CompletionItem {
        label: "continue",
        source_range: [55; 55),
        delete: [55; 55),
        insert: "continue;",
        kind: Keyword,
    },
    CompletionItem {
        label: "if",
        source_range: [55; 55),
        delete: [55; 55),
        insert: "if $0 {}",
        kind: Keyword,
    },
    CompletionItem {
        label: "loop",
        source_range: [55; 55),
        delete: [55; 55),
        insert: "loop {$0}",
        kind: Keyword,
    },
    CompletionItem {
        label: "match",
        source_range: [55; 55),
        delete: [55; 55),
        insert: "match $0 {}",
        kind: Keyword,
    },
    CompletionItem {
        label: "return",
        source_range: [55; 55),
        delete: [55; 55),
        insert: "return $0;",
        kind: Keyword,
    },
    CompletionItem {
        label: "while",
        source_range: [55; 55),
        delete: [55; 55),
        insert: "while $0 {}",
        kind: Keyword,
    },
]
