crates/ra_ide_api/src/completion/snapshots/completion_item__completes_break_and_continue_in_loops2.snap
---
created: "2019-05-23T22:44:10.859967190Z"
creator: insta@0.8.1
source: crates/ra_ide_api/src/completion/completion_item.rs
expression: kind_completions
---
[
    CompletionItem {
        label: "if",
        source_range: [60; 60),
        delete: [60; 60),
        insert: "if $0 {}",
        kind: Keyword,
    },
    CompletionItem {
        label: "loop",
        source_range: [60; 60),
        delete: [60; 60),
        insert: "loop {$0}",
        kind: Keyword,
    },
    CompletionItem {
        label: "match",
        source_range: [60; 60),
        delete: [60; 60),
        insert: "match $0 {}",
        kind: Keyword,
    },
    CompletionItem {
        label: "return",
        source_range: [60; 60),
        delete: [60; 60),
        insert: "return $0;",
        kind: Keyword,
    },
    CompletionItem {
        label: "while",
        source_range: [60; 60),
        delete: [60; 60),
        insert: "while $0 {}",
        kind: Keyword,
    },
]
