crates/ra_ide_api/src/completion/snapshots/completion_item__completes_prelude.snap
---
created: "2019-05-23T22:23:35.139262926Z"
creator: insta@0.8.1
source: crates/ra_ide_api/src/completion/completion_item.rs
expression: kind_completions
---
[
    CompletionItem {
        label: "Option",
        source_range: [18; 18),
        delete: [18; 18),
        insert: "Option",
        kind: Struct,
    },
    CompletionItem {
        label: "foo",
        source_range: [18; 18),
        delete: [18; 18),
        insert: "foo()$0",
        kind: Function,
        detail: "fn foo()",
    },
    CompletionItem {
        label: "std",
        source_range: [18; 18),
        delete: [18; 18),
        insert: "std",
        kind: Module,
    },
]
