crates/ra_ide_api/src/completion/snapshots/completion_item__completes_use_paths_across_crates.snap
---
created: "2019-05-23T22:23:35.108690807Z"
creator: insta@0.8.1
source: crates/ra_ide_api/src/completion/completion_item.rs
expression: kind_completions
---
[
    CompletionItem {
        label: "bar",
        source_range: [9; 9),
        delete: [9; 9),
        insert: "bar",
        kind: Module,
    },
]
