crates/ra_ide_api/src/completion/snapshots/completion_item__deeply_nested_use_tree.snap
---
created: "2019-05-23T22:23:35.085633034Z"
creator: insta@0.8.1
source: crates/ra_ide_api/src/completion/completion_item.rs
expression: kind_completions
---
[
    CompletionItem {
        label: "Spam",
        source_range: [23; 25),
        delete: [23; 25),
        insert: "Spam",
        kind: Struct,
    },
]
