crates/ra_ide_api/src/completion/snapshots/completion_item__dont_add_semi_after_return_if_not_a_statement.snap
---
created: "2019-05-23T22:23:35.081993214Z"
creator: insta@0.8.1
source: crates/ra_ide_api/src/completion/completion_item.rs
expression: kind_completions
---
[
    CompletionItem {
        label: "if",
        source_range: [85; 85),
        delete: [85; 85),
        insert: "if $0 {}",
        kind: Keyword,
    },
    CompletionItem {
        label: "loop",
        source_range: [85; 85),
        delete: [85; 85),
        insert: "loop {$0}",
        kind: Keyword,
    },
    CompletionItem {
        label: "match",
        source_range: [85; 85),
        delete: [85; 85),
        insert: "match $0 {}",
        kind: Keyword,
    },
    CompletionItem {
        label: "return",
        source_range: [85; 85),
        delete: [85; 85),
        insert: "return $0",
        kind: Keyword,
    },
    CompletionItem {
        label: "while",
        source_range: [85; 85),
        delete: [85; 85),
        insert: "while $0 {}",
        kind: Keyword,
    },
]
